--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "start": "next start",
     "lint": "eslint",
     "create-test-users": "npx tsx scripts/create-test-users.ts",
-    "translate-all": "npx tsx scripts/translate-all.ts"
+    "translate-all": "npx tsx scripts/translate-all.ts",
+    "create-admin": "npx tsx scripts/create-admin.ts",
+    "import-photography": "npx tsx scripts/import-photography.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.19.0",
     "@stripe/stripe-js": "^8.4.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -35,7 +38,6 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
     "@types/bcryptjs": "^2.4.6",
     "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
